infrastructure/front-service/02-service.yml
apiVersion: v1
kind: Service
metadata:
 name: ms-front-service
spec:
 selector:
  app: ms-front
 ports:
 - name: ms-front-port
   port: 4200
   targetPort: 4200
